Finalização do projeto
Atividade de treinamento para ler a base a altura de um triângulo em base.

--- a/AtivdTreinamentoTriangulo/AtivdTreinamentoTriangulo.csproj
+++ b/AtivdTreinamentoTriangulo/AtivdTreinamentoTriangulo.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +79,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\79b6a30c4cf7d295b0d312fcae3f8276.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\c713e5fb5c694bd0d2ad526d3f060d51.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hqdefault.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\meme-nazare-tedesco-1522676482199_615x300.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\6dvqxbgk7oxn4e2s7bkulenlx.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
